.metadata/.plugins/org.eclipse.cdt.ui/lab5special.build.log
02:37:10 **** Incremental Build of configuration Debug for project lab5special ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/adc.c" -mcpu=cortex-m7 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F767xx -c -I../Core/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F7xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/adc.d" -MT"Core/Src/adc.o" --specs=nano.specs -mfpu=fpv5-d16 -mfloat-abi=hard -mthumb -o "Core/Src/adc.o"
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m7 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F767xx -c -I../Core/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F7xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv5-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc "../Core/Src/stm32f7xx_it.c" -mcpu=cortex-m7 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F767xx -c -I../Core/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F7xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/stm32f7xx_it.d" -MT"Core/Src/stm32f7xx_it.o" --specs=nano.specs -mfpu=fpv5-d16 -mfloat-abi=hard -mthumb -o "Core/Src/stm32f7xx_it.o"
../Core/Src/main.c:62:13: error: static declaration of 'MX_GPIO_Init' follows non-static declaration
   62 | static void MX_GPIO_Init(void);
      |             ^~~~~~~~~~~~
In file included from ../Core/Src/main.c:24:
../Core/Inc/gpio.h:39:6: note: previous declaration of 'MX_GPIO_Init' with type 'void(void)'
   39 | void MX_GPIO_Init(void);
      |      ^~~~~~~~~~~~
../Core/Src/main.c:63:13: error: static declaration of 'MX_DMA_Init' follows non-static declaration
   63 | static void MX_DMA_Init(void);
      |             ^~~~~~~~~~~
In file included from ../Core/Src/main.c:22:
../Core/Inc/dma.h:41:6: note: previous declaration of 'MX_DMA_Init' with type 'void(void)'
   41 | void MX_DMA_Init(void);
      |      ^~~~~~~~~~~
../Core/Src/main.c:64:13: error: static declaration of 'MX_ADC1_Init' follows non-static declaration
   64 | static void MX_ADC1_Init(void);
      |             ^~~~~~~~~~~~
In file included from ../Core/Src/main.c:21:
../Core/Inc/adc.h:41:6: note: previous declaration of 'MX_ADC1_Init' with type 'void(void)'
   41 | void MX_ADC1_Init(void);
      |      ^~~~~~~~~~~~
../Core/Src/main.c:192:3: warning: data definition has no type or storage class
  192 |   MPU_Config();
      |   ^~~~~~~~~~
../Core/Src/main.c:192:3: warning: type defaults to 'int' in declaration of 'MPU_Config' [-Wimplicit-int]
../Core/Src/main.c:192:3: error: conflicting types for 'MPU_Config'; have 'int()'
../Core/Src/main.c:59:13: note: previous declaration of 'MPU_Config' with type 'void(void)'
   59 | static void MPU_Config(void);
      |             ^~~~~~~~~~
../Core/Src/main.c:258:6: error: conflicting types for 'MPU_Config'; have 'void(void)'
  258 | void MPU_Config(void)
      |      ^~~~~~~~~~
../Core/Src/main.c:192:3: note: previous declaration of 'MPU_Config' with type 'int()'
  192 |   MPU_Config();
      |   ^~~~~~~~~~
../Core/Src/main.c:59:13: warning: 'MPU_Config' used but never defined
   59 | static void MPU_Config(void);
      |             ^~~~~~~~~~
make: *** [Core/Src/subdir.mk:46: Core/Src/main.o] Error 1
make: *** Waiting for unfinished jobs....
../Core/Src/stm32f7xx_it.c: In function 'HAL_ADC_ConvHalfCpltCallback':
../Core/Src/stm32f7xx_it.c:68:27: error: 'LD2_GPIO_Port' undeclared (first use in this function)
   68 |         HAL_GPIO_WritePin(LD2_GPIO_Port, LD2_Pin, GPIO_PIN_SET);
      |                           ^~~~~~~~~~~~~
../Core/Src/stm32f7xx_it.c:68:27: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/stm32f7xx_it.c:68:42: error: 'LD2_Pin' undeclared (first use in this function)
   68 |         HAL_GPIO_WritePin(LD2_GPIO_Port, LD2_Pin, GPIO_PIN_SET);
      |                                          ^~~~~~~
../Core/Src/stm32f7xx_it.c: In function 'HAL_ADC_ConvCpltCallback':
../Core/Src/stm32f7xx_it.c:77:27: error: 'LD2_GPIO_Port' undeclared (first use in this function)
   77 |         HAL_GPIO_WritePin(LD2_GPIO_Port, LD2_Pin, GPIO_PIN_RESET);
      |                           ^~~~~~~~~~~~~
../Core/Src/stm32f7xx_it.c:77:42: error: 'LD2_Pin' undeclared (first use in this function)
   77 |         HAL_GPIO_WritePin(LD2_GPIO_Port, LD2_Pin, GPIO_PIN_RESET);
      |                                          ^~~~~~~
../Core/Src/stm32f7xx_it.c: In function 'HAL_DMA_Start_Transfer':
../Core/Src/stm32f7xx_it.c:84:27: error: 'hadc1' undeclared (first use in this function)
   84 |     if(HAL_ADC_Start_DMA(&hadc1, (uint32_t*)adc_buffer, 8) != HAL_OK)
      |                           ^~~~~
make: *** [Core/Src/subdir.mk:46: Core/Src/stm32f7xx_it.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.

02:37:10 Build Failed. 13 errors, 3 warnings. (took 777ms)

